[gd_scene load_steps=5 format=3 uid="uid://rhythm_prototype_001"]

[ext_resource type="Script" path="res://scenes/prototypes/rhythm_prototype/rhythm_prototype.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://c2cwox8a2x8qj" path="res://scenes/player/player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://dqv2jyle6s7j1" path="res://scenes/enemies/enemy.tscn" id="3_enemy"]
[ext_resource type="Script" path="res://scripts/input/rhythm_pattern.gd" id="4_rhythm"]

[node name="RhythmPrototype" type="Node2D"]
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.12, 0.12, 0.18, 1)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(576, 400)

[node name="RhythmPattern" type="Node" parent="."]
script = ExtResource("4_rhythm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SpellLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 500.0
offset_bottom = 50.0
text = "Press 1-4 to start a pattern"

[node name="AccuracyLabel" type="Label" parent="CanvasLayer"]
offset_left = 520.0
offset_top = 100.0
offset_right = 700.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 24

[node name="BeatDisplay" type="Control" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="HelpLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = -20.0
horizontal_alignment = 1
text = "1: Spark (easy) | 2: Fireball (medium) | 3: Lightning (hard) | 4: Meteor (expert)
Click when beats appear - timing matters!
WASD to move, mouse to aim"

[node name="Enemy1" parent="." instance=ExtResource("3_enemy")]
position = Vector2(200, 200)

[node name="Enemy2" parent="." instance=ExtResource("3_enemy")]
position = Vector2(900, 200)

[node name="Enemy3" parent="." instance=ExtResource("3_enemy")]
position = Vector2(200, 500)

[node name="Enemy4" parent="." instance=ExtResource("3_enemy")]
position = Vector2(900, 500)

[node name="Enemy5" parent="." instance=ExtResource("3_enemy")]
position = Vector2(550, 150)
